--- a/src/Components/Portfolio/portfolio.css
+++ b/src/Components/Portfolio/portfolio.css
@@ -25,7 +25,7 @@
   
   .goals-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
     gap: 2rem;
     max-width: 1200px;
     margin: 0 auto;
@@ -58,11 +58,21 @@
     background-color: #4169E1;
     color: white;
     padding: 0.3rem 0.8rem;
-    border-radius: 20px;
+    border-radius: 10px;
     font-weight: bold;
     font-size: 0.9rem;
   }
-  
+  .delete{
+    max-width: 200px ;
+    height: 50px;
+    background-color: black;
+    margin-left: 100px;
+    margin-top: 30px;
+
+  }
+  .delete:hover{
+    background-color: red ;
+  }
   .tasks-list {
     display: flex;
     flex-direction: column;
